<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="40dp"
            android:layout_marginStart="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name" />

        <EditText
            android:id="@+id/edShoeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/txtmargin"
            android:hint="@string/enter_shoe_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/company" />

        <EditText
            android:id="@+id/edShoeCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/txtmargin"
            android:hint="@string/enter_company_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="@dimen/txtmargin"
            android:text="@string/shoe_size" />

        <EditText
            android:id="@+id/edShoSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/txtmargin"
            android:hint="@string/enter_shoes_size"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/edDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/txtmargin"
            android:hint="Enter Shoe Description" />

        <Button
            android:id="@+id/btnsavetheshoe"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save" />

        <Button
            android:id="@+id/btncanceltheshop"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancle" />
    </LinearLayout>

</layout>