<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txtmargin"
        android:layout_marginStart="28dp"
        android:text="@string/emailtxt" />
    <EditText
        android:id="@+id/edemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/txtmargin"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_emailtxt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/passwordtxt" />
    <EditText
        android:id="@+id/edpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/txtmargin"
        android:inputType="textPassword"
        android:hint="@string/enter_your_passwordtxt"/>
    <Button
        android:id="@+id/btnregister"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registertxt"/>
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logintxt"/>
</LinearLayout>
</layout>