<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- i choose linearlayout because it is easier for this is simple views -->
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcometxt1"
            android:textSize="@dimen/txtbigsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txtmargin"
            android:text="@string/welcometxt2"
            android:textSize="@dimen/txtbigsize" />

        <Button
            android:id="@+id/btnnextFromWelcome"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nextbtn" />
    </LinearLayout>
</layout>